--- a/homeworks/Unit 1 homework/Homework 1 instructions.html
+++ b/homeworks/Unit 1 homework/Homework 1 instructions.html
@@ -3134,7 +3134,7 @@ window.Quarto = {
 <section id="q1-what-kind-of-dataset-do-we-have-5-points" class="level3">
 <h3 class="anchored" data-anchor-id="q1-what-kind-of-dataset-do-we-have-5-points">Q1: What kind of dataset do we have? (5 points)</h3>
 <ul>
-<li><p>Using the Five W definitions from the textbook to categorize each of the following variables in the <code>medallists.csv</code> dataset.</p>
+<li><p>Use the Five W definitions from the textbook to categorize each of the following variables in the <code>medallists.csv</code> dataset.</p>
 <ul>
 <li><code>medal_date</code></li>
 <li><code>medal_type</code></li>
@@ -3159,7 +3159,7 @@ window.Quarto = {
 <p>One of the events the committee is particularly interested in is the results of the men’s 100 meter race.</p>
 <p><em>Note 1</em>: for this question, you will need to refer to the <code>Athletics.csv</code> file.</p>
 <p><em>Note 2</em>: R imports datasets by default keeping text as text (<code>strings</code> in R world). Remember the DataCamp method to convert the <code>strings</code> into <code>factors</code> for displaying results as a numeric variable.</p>
-<p><em>Note 3</em>: There may be some NA cases (that is, cases with missing value - empty cells in th) in the data. You can see how deal with these cases <a href="https://sparkbyexamples.com/r-programming/remove-rows-with-na-in-r/">here</a></p>
+<p><em>Note 3</em>: There may be some NA cases (that is, cases with missing value - empty cells in in the data). You can see how deal with these cases <a href="https://sparkbyexamples.com/r-programming/remove-rows-with-na-in-r/">here</a></p>
 <ul>
 <li>Make a histogram of <code>result</code> for the 100 meter race competitors.
 <ul>
