JK final update

--- a/homeworks/Unit 1 homework/Homework 1 instructions.html
+++ b/homeworks/Unit 1 homework/Homework 1 instructions.html
@@ -3134,8 +3134,7 @@ window.Quarto = {
 <section id="q1-what-kind-of-dataset-do-we-have-5-points" class="level3">
 <h3 class="anchored" data-anchor-id="q1-what-kind-of-dataset-do-we-have-5-points">Q1: What kind of dataset do we have? (5 points)</h3>
 <ul>
-<li><p>Use the Five W definitions in section 1.2 of the textbook, please describe this dataset.</p></li>
-<li><p>Additionally, using the definitions in textbook section 1.3, please categorize each of the following variables in the <code>medallists.csv</code> dataset.</p>
+<li><p>Using the definitions in textbook section 1.3, please categorize each of the following variables in the <code>medallists.csv</code> dataset.</p>
 <ul>
 <li><code>medal_date</code></li>
 <li><code>medal_type</code></li>
