--- a/activities/Lecture 1.3/Lecture 1.3 - Advanced distributions activity.html
+++ b/activities/Lecture 1.3/Lecture 1.3 - Advanced distributions activity.html
@@ -3319,7 +3319,7 @@ Table 1: Calories of select McDonald’s items
 <th style="text-align: left;" data-quarto-table-cell-role="th">Category</th>
 <th style="text-align: right;" data-quarto-table-cell-role="th">Min</th>
 <th style="text-align: right;" data-quarto-table-cell-role="th">Q1</th>
-<th style="text-align: right;" data-quarto-table-cell-role="th">Mean Calories</th>
+<th style="text-align: right;" data-quarto-table-cell-role="th">Median Calories</th>
 <th style="text-align: right;" data-quarto-table-cell-role="th">Q3</th>
 <th style="text-align: right;" data-quarto-table-cell-role="th">Max</th>
 </tr>
@@ -3329,7 +3329,7 @@ Table 1: Calories of select McDonald’s items
 <td style="text-align: left;">Beef &amp; Pork</td>
 <td style="text-align: right;">240</td>
 <td style="text-align: right;">430</td>
-<td style="text-align: right;">494</td>
+<td style="text-align: right;">500</td>
 <td style="text-align: right;">570</td>
 <td style="text-align: right;">750</td>
 </tr>
@@ -3337,7 +3337,7 @@ Table 1: Calories of select McDonald’s items
 <td style="text-align: left;">Breakfast</td>
 <td style="text-align: right;">150</td>
 <td style="text-align: right;">410</td>
-<td style="text-align: right;">527</td>
+<td style="text-align: right;">470</td>
 <td style="text-align: right;">570</td>
 <td style="text-align: right;">1150</td>
 </tr>
@@ -3345,7 +3345,7 @@ Table 1: Calories of select McDonald’s items
 <td style="text-align: left;">Chicken &amp; Fish</td>
 <td style="text-align: right;">190</td>
 <td style="text-align: right;">410</td>
-<td style="text-align: right;">553</td>
+<td style="text-align: right;">480</td>
 <td style="text-align: right;">610</td>
 <td style="text-align: right;">1880</td>
 </tr>
